--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -17,6 +17,15 @@ $box-text-gray: #848789;
 $preview-header: #071a3a;
 $testimonial-gray: #71727a;
 $partner-gray: #4c4c4c;
+$undg-blue: #009DE0;
+$undg-light-blue: #CDEBF8;
+$undg-dark-blue: #1D5C96;
+$black: #000;
+$white: #fff;
+$gray-text: #4A4A4A;
+$light-gray-text: #9B9B9B;
+$selection-sharer: #0093DB;
+
 
 //Font Stacks
 $montserrat: 'Montserrat', sans-serif;
