--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,5 +1,10 @@
 {{ define "main" }}
 
+<section class="title container">
+  <h1 class="title">{{ .Title }}
+</section>
+<section class="content container">
   {{ .Content }}
+</section>
 
 {{ end }}
