--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,16 +1,13 @@
 
-<header class="header">
+<header>
   <div class="header container">
-    <nav class="header menu">
-      <div class="header brand">
-        <a class="logo" href="/">
-          <img src="{{ .Site.BaseURL }}/images/logo.png" alt="Shorashim Logo">
-        </a>
-      </div>
-      <a class="item" href="#">Home</a>
-      <a class="item" href="https://www.shorashim.org/">Tailor Made Programs</a>
-      <a class="item" href="https://www.israelwithisraelis.com/">Birthright Israel Trips</a>
-      <a class="item lightbox-202416448093151" style="cursor: pointer;">Chat with Us</a>
-    </nav>
+    <div class="site-logo">
+      <a href="{{ .Site.BaseURL }}/">
+        <img src="{{ .Site.BaseURL }}images/e-heza-logo.png">
+      </a>
+    </div>
+    <div class="site-title">
+      E-Heza System Documentation
+    </div>
   </div>
 </header>
