--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -13,7 +13,9 @@
   <meta property="og:title" content="{{ .Site.Title }}">
 {{ end }}
 
-<link href="https://fonts.googleapis.com/css?family=Lato:700|Merriweather:400,700" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
 {{ $options := (dict "targetPath" "css/style.css" "outputStyle" "compressed" "enableSourceMap" true ) }}
