--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -45,12 +45,18 @@ header {
   will-change: scroll-position;
   padding: 2em 2em 2em 4em;
 
+  h2 {
+    font-size: 1em;
+    text-transform: uppercase;
+  }
   h3 {
     font-size: 1em;
+    padding-left: 0.33em;
   }
   ul {
+    font-size: .85em;
     list-style-type: none;
-    padding-left: 0;
+    padding-left: 0.33em;
   }
 }
 
