--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -1,9 +1,45 @@
-  <h3>General</h3>
-  <ul>
-    {{ range where .Site.Pages "Params.section" "General" }}
-     <li><a href="{{ .Permalink }}">{{ .Title }}</a></li>
-    {{ end }}
-  </ul>
+
+<h2>Research and Support Documentation</h2>
+
+<h3>User testing sessions</h3>
+<ul>
+  <li><a href="#">ANC _Nurse user testing report</a></li>
+  <li><a href="#">ANC_mother user testing report</a></li>
+  <li><a href="#">AIM_ CHWs User testing report </a></li>
+  <li><a href="#">AIM_CHWs user testing Facilitation guide</a></li>
+  <li><a href="#">Focus Group Discussion outline</a></li>
+  <li><a href="#">Focus Group feedback notes</a></li>
+  <li><a href="#">Testing report 2018</a></li>
+</ul>
+
+
+<h3>Feedback from Training sessions</h3>
+
+<ul>
+  <li><a href="#">Feedback from Ruli DH on ANC</a></li>
+  <li><a href="#">Feedback from Nemba DH on E-Heza</a></li>
+</ul>
+
+<h3>Internal Reviews by the E-Heza team</h3>
+
+<ul>
+  <li><a href="#">Front end registration</a></li>
+  <li><a href="#">Aheza community Health Initiative</a></li>
+  <li><a href="#">Case management</a></li>
+  <li><a href="#">CHWs Dashboard</a></li>
+  <li><a href="#">CHWs nutrition </a></li>
+  <li><a href="#">Group/individual encounter</a></li>
+  <li><a href="#">FBF module</a></li>
+  <li><a href="#">ANC Labs</a></li>
+  <li><a href="#">SPV and newborn exam First versio</a></li>
+  <li><a href="#">Home visits</a></li>
+  <li><a href="#">Nutrition next steps</a></li>
+  <li><a href="#">Health center dashboard</a></li>
+  <li><a href="#">ANC for CHWs</a></li>
+  <li><a href="#">Subsequent visit</a></li>
+</ul>
+
+<h2>User Documentation</h2>
 
   <h3>CHW Modules</h3>
   <ul>
@@ -17,18 +53,31 @@
      <li><a href="{{ .Permalink }}">{{ .Title }}</a></li>
     {{ end }}
   </ul>
-  <h3>Creating and Editing Content</h3>
-  <ul>
-    {{ range where .Site.Pages "Params.section" "Creating and Editing Content" }}
-     <li><a href="{{ .Permalink }}">{{ .Title }}</a></li>
-    {{ end }}
-  </ul>
 
-  <h3>Admin/Developer Functions</h3>
-  <ul>
-    {{ range where .Site.Pages "Params.section" "Admin/Developer Functions" }}
-     <li><a href="{{ .Permalink }}">{{ .Title }}</a></li>
-    {{ end }}
+<h2>Adminstrator Documentation</h2>
+<h3>General</h3>
+<ul>
+  {{ range where .Site.Pages "Params.section" "General" }}
+   <li><a href="{{ .Permalink }}">{{ .Title }}</a></li>
+  {{ end }}
+</ul>
 
-  </ul>
-</section>
+<h3>Creating and Editing Content</h3>
+<ul>
+  {{ range where .Site.Pages "Params.section" "Creating and Editing Content" }}
+   <li><a href="{{ .Permalink }}">{{ .Title }}</a></li>
+  {{ end }}
+</ul>
+
+<h2>Developer Documentation</h2>
+<ul>
+  {{ range where .Site.Pages "Params.section" "Admin/Developer Functions" }}
+   <li><a href="{{ .Permalink }}">{{ .Title }}</a></li>
+  {{ end }}
+</ul>
+<h2>Community Documentation</h2>
+<ul>
+  {{ range where .Site.Pages "Params.section" "Community" }}
+   <li><a href="{{ .Permalink }}">{{ .Title }}</a></li>
+  {{ end }}
+</ul>
