--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -62,7 +62,7 @@ header {
 
 .docs-content {
   margin: 0 auto;
-  max-width: 700px;
+  max-width: 800px;
   min-height: 100vh;
   padding: unset;
   padding-top: 4em;
@@ -114,6 +114,7 @@ header {
 }
 
 table {
+  font-size: 0.75em;
   width: 100%;
   margin-bottom: 1rem;
   color: #212529;
@@ -131,6 +132,7 @@ table tbody {
 }
 
 table thead th {
+  font-weight: bold;
   vertical-align: bottom;
   border-bottom-color: #495057;
 }
