--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -3,21 +3,21 @@
 
 <h3>User testing sessions</h3>
 <ul>
-  <li><a href="#">ANC _Nurse user testing report</a></li>
-  <li><a href="#">ANC_mother user testing report</a></li>
-  <li><a href="#">AIM_ CHWs User testing report </a></li>
-  <li><a href="#">AIM_CHWs user testing Facilitation guide</a></li>
-  <li><a href="#">Focus Group Discussion outline</a></li>
-  <li><a href="#">Focus Group feedback notes</a></li>
-  <li><a href="#">Testing report 2018</a></li>
+  <li><a href="https://docs.google.com/document/d/1ez4i7tcT0ggw32yMpdSqh7h4ICG6ekOS/edit#heading=h.gjdgxs">ANC _Nurse user testing report</a></li>
+  <li><a href="https://docs.google.com/document/d/1UwwORcW-qQGplDqQ2e-ECep6ZCs04GSS/edit">ANC_mother user testing report</a></li>
+  <li><a href="https://docs.google.com/presentation/d/1ovzYzbFJRGCoC6WvMZYGg5VskU6k0yQ4/edit#slide=id.p1">AIM_ CHWs User testing report </a></li>
+  <li><a href="https://docs.google.com/presentation/d/1ovzYzbFJRGCoC6WvMZYGg5VskU6k0yQ4/edit#slide=id.p1">AIM_CHWs user testing Facilitation guide</a></li>
+  <li><a href="https://docs.google.com/document/d/13Dj7hRFw4vZ94vqDiZKO2EoP4OzmAsyrVJNPvxB3PDg/edit">Focus Group Discussion outline</a></li>
+  <li><a href="https://docs.google.com/document/d/1yrJ7qpuVwRNtWJ9HkRi3B9TbT8IqkSRt/edit">Focus Group feedback notes</a></li>
+  <li><a href="https://docs.google.com/document/d/1dcVFF16NpUbZRfJLdh7y4we6RMVxUJib/edit">Testing report 2018</a></li>
 </ul>
 
 
 <h3>Feedback from Training sessions</h3>
 
 <ul>
-  <li><a href="#">Feedback from Ruli DH on ANC</a></li>
-  <li><a href="#">Feedback from Nemba DH on E-Heza</a></li>
+  <li><a href="https://docs.google.com/document/d/1rP7gxNGMX_a-NxLk0m66Vv8pC3aNiztlSOUtPeRbCwU/edit">Feedback from Ruli DH on ANC</a></li>
+  <li><a href="https://docs.google.com/document/d/1D9RjUdgtpGSBP4Qu6fEFq3YxCyqJaRvXGpm5ijIVYSw/edit">Feedback from Nemba DH on E-Heza</a></li>
 </ul>
 
 <h3>Internal Reviews by the E-Heza team</h3>
