--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,8 @@
 <footer class="footer">
   <div class="footer container">
-
+    <p>Copyright © 2021 </p>
+    <p>The text of this documentation site is available under the <a href="https://creativecommons.org/licenses/by/4.0/">Creative Commons 4.0 International Attribution License (CC BY 4.0)</a>.</p>
+    <p>E-Heza open source software is licensed under the <a href="https://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a>.</p>
+    <p>"E-Heza" and the E-Heza logo a trademark of TIP Global Health.</p>
   </div>
 </footer>
