--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -7,7 +7,7 @@
       </a>
     </div>
     <div class="site-title">
-      E-Heza System Documentation
+      E-Heza Documentation
     </div>
   </div>
 </header>
