--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -2,29 +2,31 @@
 
 
 header {
-  padding: 1em 0;
+  padding: 0 2rem;;
   background-color: #A8A8A8	;
-  //background-image: -webkit-linear-gradient(top, #0779bf 0%, #48a9e4 100%);
+  display: flex;
+  height: 5rem;
+  width: 100%;
+  position: fixed;
+  align-items: center;
+  z-index: 20;
 
-  .header {
-    display: flex;
-    align-items: center;
 
-    .site-logo {
-      width: 74px;
-      margin-right: 2em;
+  .site-logo {
+    width: 40px;
+    margin-right: 2em;
 
-      img {
-        width: 100%;
-        height: auto;
-      }
+    img {
+      display: block;
+      width: 100%;
+      height: auto;
     }
+  }
 
-    .site-title {
-      font-family: 'Lato', sans-serif;
-      color: white;
-      font-size: 2.4em;
-    }
+  .site-title {
+    font-family: 'Lato', sans-serif;
+    color: white;
+    font-size: 1.4rem;
   }
 }
 
@@ -47,17 +49,16 @@ footer {
 
 .sidebar {
   flex: 0 0 320px;
-  height: calc(100vh - 18rem);
+  height: calc(100vh - 11rem;);
   transform: translateX(0);
   vertical-align: top;
   width: 320px;
   position: sticky;
-  top: 5em;
+  top: 5rem;
   backface-visibility: hidden;
   will-change: scroll-position;
   padding: 2em 2em 2em 4em;
   overflow-y: scroll;
-  padding-bottom: 6em;
 
   h2 {
     font-size: 1em;
@@ -79,7 +80,7 @@ footer {
   max-width: 800px;
   min-height: 100vh;
   padding: unset;
-  padding-top: 4em;
+  padding-top: 9rem;
   position: relative;
   width: 100%;
 }
