--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,20 +1,3 @@
 {{ define "main" }}
-<h1>Welcome to E-Heza</h1>
-<p>
-   E-Heza Data Solutions is a digital app designed by and for the frontline health worker that can be used on a smartphone or tablet.
-</p>
-<p>
-  With a global shortfall of 18 million frontline healthcare workers and the pressure on the existing health workforce to provide more services to more people more often, it is critical that digital tools are designed to support the needs of frontline healthcare workers and their ability to provide higher quality care to the community members they serve.
-</p>
-
-<p>
-  E-Heza captures essential data at the point of care to improve the health of mother and child by providing frontline health workers with immediate insights to help personalize information and advice, and help the mother track the well-being of her child.
-</p>
-
-<p>
-  E-Heza is a project of <a href="https://tipglobalhealth.org/">TIP Global Health</a> and is an open source software project governed by the E-Heza Executive Committee. We welcome particpation in the project through <a href="/contribute-eheza/">contributions of code, testing, documentation, and feature requests</a>. E-Heza open source software is licensed under the <a href="https://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a>.
-</p>
-<p>
-  The text of this documentation is also open source and is available under the <a href="https://creativecommons.org/licenses/by/4.0/">Creative Commons 4.0 International Attribution License (CC BY 4.0)</a>. You can contribute to documentation at the <a href="https://github.com/TIP-Global-Health/eheza-documentation">Github Repository</a>.
-</p>
+{{ content }}
 {{ end }}
