Fix path for hamburger icon.

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -11,6 +11,6 @@
     </div>
   </div>
   <div class="header-right">
-    <button class="nav-button" onclick="sidebarNav()"><img src="/images/hamburger_icon_white.svg" alt=""></button>
+    <button class="nav-button" onclick="sidebarNav()"><img src="{{ .Site.BaseURL }}images/hamburger_icon_white.svg" alt=""></button>
   </div>
 </header>
