--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -95,10 +95,19 @@ footer {
     font-size: 1em;
     padding-left: 0.33em;
   }
+  h4 {
+    font-size: .85em;
+    padding-left: 0.33em;
+  }
   ul {
     font-size: .85em;
-    list-style-type: none;
-    padding-left: 0.33em;
+    list-style-type: disc;
+    margin-left: 1.5em;
+    padding-left: 0;
+
+    li::marker {
+      color: #A8A8A8;
+    }
   }
 }
 
