--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -29,11 +29,27 @@
     </ul>
 
     <h3>Health Center Modules</h3>
+    <h4>Antenatal Care</h4>
     <ul>
-      {{ range where (where .Site.RegularPages "Type" "user_docs") "Params.section" "Health Center Modules" }}
+      {{ range where (where (where .Site.RegularPages.ByWeight "Type" "user_docs") "Params.section" "Health Center Modules") "Params.subsection" "Antenatal Care" }}
        <li><a href="{{ .Permalink }}">{{ .Title }}</a></li>
       {{ end }}
     </ul>
+
+    <h4>Pediatric Care</h4>
+    <ul>
+      {{ range where (where (where .Site.RegularPages.ByWeight "Type" "user_docs") "Params.section" "Health Center Modules") "Params.subsection" "Pediatric Care" }}
+       <li><a href="{{ .Permalink }}">{{ .Title }}</a></li>
+      {{ end }}
+    </ul>
+
+    <h4>COVID-19/Acute Illness Management</h4>
+    <ul>
+      {{ range where (where (where .Site.RegularPages.ByWeight "Type" "user_docs") "Params.section" "Health Center Modules") "Params.subsection" "Acute Illness Management" }}
+       <li><a href="{{ .Permalink }}">{{ .Title }}</a></li>
+      {{ end }}
+    </ul>
+
 
   <h2>Adminstrator Documentation</h2>
   <h3>General</h3>
