Update new research

--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -129,3 +129,10 @@
     <li><a href="#">ANC for CHWs</a></li>
     <li><a href="#">Subsequent visit</a></li>
   </ul>
+
+  <h3>Research</h3>
+
+  <ul>
+    <li><a href="posts-papers/">Posts & White Papers</a></li>
+    <li><a href="https://docs.google.com/document/d/1E7lxgf30l8Wu3Pf5nDRToj_XoRtalCayP10y5wx4ugg/edit?usp=sharing">Performance & Scalability report</a></li>
+  </ul>
