--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,3 +1,13 @@
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-PD24JRLGX6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-PD24JRLGX6');
+</script>
+
 {{ with .Title }}
   <title>{{ . }}</title>
 {{ else }}
